--- a/Alumni-Swag-App/package.json
+++ b/Alumni-Swag-App/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.4.1",
+    "raw-loader": "^4.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
